<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Queries">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <EditText
                android:id="@+id/editTextFilmTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editTextFilmTitle"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <EditText
                android:id="@+id/editTextFilmOriginalTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editTextFilmOriginalTitle"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <EditText
                android:id="@+id/editTextFilmYear"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editTextFilmYear"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <EditText
                android:id="@+id/editTextGenre"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editTextGenre"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/textRunningTime"
                android:layout_width="191dp"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/textRunningTime"
                android:textAlignment="textEnd"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textMin"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/textMin"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textAnd"
                android:layout_width="21dp"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/textAnd"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/textMax"
                android:layout_width="54dp"
                android:layout_height="40dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/textMax"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/buttonFindFilm" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonMovieData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goMovieData"
            android:text="Button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>