<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="638dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="53dp">

            <TextView
                android:id="@+id/textViewTopFilms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/textViewTopFilms"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="412dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/addViewingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goFindMovie"
                android:text="@string/buttonAddViewing" />

            <Button
                android:id="@+id/queriesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goQueries"
                android:text="@string/buttonQueries" />

        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>