<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddViewingToFilm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/editTextFilmTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editTextFilmTitle"
                android:inputType="textPersonName"
                android:text="@string/editTextFilmTitle"
                android:textAlignment="center"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/editTextFilmOriginalTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editTextFilmOriginalTitle"
                android:inputType="textPersonName"
                android:text="@string/editTextFilmOriginalTitle"
                android:textAlignment="center"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/editTextFilmYear"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/editTextFilmYear"
                android:inputType="number"
                android:text="@string/editTextFilmYear"
                android:textAlignment="center"
                android:textSize="18dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/editTextViewingDate"
                android:inputType="textPersonName"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/buttonSaveFilm"
                tools:text="@string/buttonSaveFilm" />
        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>