<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindMovie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/editTextFilmSearch"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editTextFilmSearch"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonSearchFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/buttonFindFilm" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="412dp" >

            <Button
                android:id="@+id/buttonEditFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="Añadir Visionado" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/buttonAddNewFilm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goAddEditMovie"
                android:text="@string/buttonAddNewFilm" />
        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>